Update chat_rooms.fr.md to explain the IRC bridge is down (in FR)
I apologise for my bad french.

--- a/i18n/fr/docusaurus-plugin-content-docs/current/community/10.help.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/community/10.help.mdx
@@ -43,6 +43,8 @@ this room is available via
 - XMPP (`support@conference.yunohost.org`)
 :::
 
+**NB : Actuellement, le bridge IRC ([grace à Matrix](https://libera.chat/guides/faq#are-bridges-allowed)) est désactivé. Ainsi, alors que les canaux XMPP et Matrix sont connectés, le canal IRC ne l'est pas**.
+
 ## ... or ask on the forum!
 
 Please follow the Support section post template. It helps everyone understand the context of your request.
