--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,22 +1,20 @@
 ---
-title: Welcome!
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/docs'
-  aliases:
-    - '/'
-visible: false
+title: "Docs introduction"
+sidebar_position: 0
 ---
 
-This is the documentation for [YunoHost, a libre operating system aiming to simplify server administration and democratize self-hosting](/whatsyunohost).
+# Welcome to the YunoHost documentation!
+
+This is the documentation for [YunoHost, a libre operating system aiming to simplify server administration and democratize self-hosting](/overview/what_is_yunohost).
 
 As a soon-to-be administrator of your own server, go to the [Admin guide](/admindoc) to learn more about self-hosting, how to install your YunoHost server and install your first apps.
 
-You can check out the [application catalog](/apps) to browse apps that can be installed on a server (though you can also explore it directly from your admin interface !)
+You can check out the [application catalog](https://apps.yunohost.org) to browse apps that can be installed on a server (though you can also explore it directly from your admin interface).
 
-The [Community](/community) is here for you if you need some help : come [chat](/chat_rooms) with us or reach out on the [forum](/community/forum) !
+The [Community](/community) is here for you if you need some help : come [chat](/chat_rooms) with us or reach out on the [forum](/community/forum)!
+
+{ /*
+TODO:
 
 [center]
 
@@ -27,8 +25,11 @@ The [Community](/community) is here for you if you need some help : come [chat](
 
 [/center]
 
+
 [center]
-<a href="https://yunohost.org/" class="btn btn-lg inline"><i class="fa fa-fw fa-arrow-left"></i> Go back to the homepage</a>
+<a href="/" class="btn btn-lg inline"><i class="fa fa-fw fa-arrow-left"></i> Go back to the homepage</a>
 [/center]
 
 !!!! To navigate this documentation, you can use your left and right arrow keys. Browse directly to the section you want with the [fa=bars /] side panel, or using the [fa=search /] search box. Enjoy!
+
+*/ }
