docusaurus: Convert 02.administer/05,15.admin_guide

--- a/docs/02.administer/15.admin_guide/15.admin_guide.md
+++ b/docs/02.administer/15.admin_guide/15.admin_guide.md
@@ -1,16 +1,12 @@
 ---
-title: Overview of the YunoHost ecosystem
-menu: Guided tour for the admin
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/admin_guide'
+title: Guided tour for the admin
 ---
- 
+
+# Overview of the YunoHost ecosystem
+
 This page provide an overview of the ecosystem of a YunoHost server. While this overview contains several approximations, the purpose here is to introduce the global picture before digging into the different aspects.
 
-![](image://ecosystem.png)
+![Yunohost ecosystem graph](/img/ecosystem.png)
 
 Everything starts with the special user **admin**. This is the administrator of the machine who can install, configure and manage things on the server through the web administration interface, or via SSH and the command line interface. *(If you are already familiar with GNU/Linux, it is quite similar to root. YunoHost has this additional 'admin' user for several technical reasons.)*
 
