--- a/docs/02.administer/15.admin_guide/20.users/groups_and_permissions.mdx
+++ b/docs/02.administer/15.admin_guide/20.users/groups_and_permissions.mdx
@@ -1,16 +1,14 @@
 ---
-title: The users, groups and permissions
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/groups_and_permissions'
+title: Users groups and permissions
 ---
+
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 You can access the *groups and permissions* management interface from the webadmin
 by going into the 'Users' section and clicking the corresponding button:
 
-![](image://button_to_go_to_permission_interface.png)
+![screenshot of users permission button](/img/button_to_go_to_permission_interface.png)
 
 ## Managing groups
 
@@ -32,14 +30,14 @@ The content of those groups cannot be changed, only the permissions given to the
 
 ### List existing groups
 
-[ui-tabs position="top-left" active="0" theme="lite"]
-[ui-tab title="From the web interface"]
+<Tabs groupId="admin-commands">
+<TabItem value="web" label="From the web interface">
 The existing groups are listed at the top of the *groups and permissions* page.
 
-![](image://groups_default-groups.png)
+![](/img/groups_default-groups.png)
 
-[/ui-tab]
-[ui-tab title="From the command line"]
+</TabItem>
+<TabItem value="cli" label="From the command line">
 
 To list the currently existing groups in CLI :
 
@@ -54,42 +52,46 @@ groups:
       - delphine
 ```
 
-[/ui-tab]
-[/ui-tabs]
+</TabItem>
+</Tabs>
 
 ### Creating a new group
 
-[ui-tabs position="top-left" active="0" theme="lite"]
-[ui-tab title="From the web interface"]
+<Tabs groupId="admin-commands">
+<TabItem value="web" label="From the web interface">
+
 To create a new group, simply click on the "New Group" button at the top of the page. You may only choose a name formed with letters (uper- and lowercase) and spaces. The group is created empty and without any permission.
 
-![](image://groups_button-new-group.png)
+![screenshot of new group button](/img/groups_button-new-group.png)
 
-[/ui-tab]
-[ui-tab title="From the command line"]
+</TabItem>
+<TabItem value="cli" label="From the command line">
+
 In CLI, to create a new group called `yolo_crew`
 
 ```bash
 yunohost user group create yolo_crew
 ```
 
-[/ui-tab]
-[/ui-tabs]
+</TabItem>
+</Tabs>
 
 ### Updating a group
 
-[ui-tabs position="top-left" active="0" theme="lite"]
-[ui-tab title="From the web interface"]
+<Tabs groupId="admin-commands">
+<TabItem value="web" label="From the web interface">
+
 Let's add a first to this group: in the group panel, click the button "add a user" and scroll to the desired user, then click on it.
 
-![](image://groups_button-add-user.png)
+![](/img/groups_button-add-user.png)
 
 To remove a user, click on the cross next to their username, in the group panel.
 
-![](image://groups_button-remove-user.png)
+![](/img/groups_button-remove-user.png)
 
-[/ui-tab]
-[ui-tab title="From the command line"]
+</TabItem>
+<TabItem value="cli" label="From the command line">
+
 In CLI, use the following command to add `charlie` and `delphine`to the `yolo_crew` group:
 
 ```bash
@@ -115,27 +117,29 @@ groups:
       - delphine
 ```
 
-[/ui-tab]
-[/ui-tabs]
+</TabItem>
+</Tabs>
 
 ### Deleting groups
 
-[ui-tabs position="top-left" active="0" theme="lite"]
-[ui-tab title="From the web interface"]
+<Tabs groupId="admin-commands">
+<TabItem value="web" label="From the web interface">
+
 To delete a group, click on the red cross on the top right of the group panel. You will be asked for confirmation.
 
-![](image://groups_button-delete-group.png)
+![](/img/groups_button-delete-group.png)
 
-[/ui-tab]
-[ui-tab title="From the command line"]
+</TabItem>
+<TabItem value="cli" label="From the command line">
+
 To delete the group `yolo_crew` in CLI, you may run
 
 ```bash
 yunohost user group delete yolo_crew
 ```
 
-[/ui-tab]
-[/ui-tabs]
+</TabItem>
+</Tabs>
 
 ## Managing permissions
 
@@ -143,14 +147,16 @@ The permission mechanism allow to restrict access to services (for example mail,
 
 ### List permissions
 
-[ui-tabs position="top-left" active="0" theme="lite"]
-[ui-tab title="From the web interface"]
+<Tabs groupId="admin-commands">
+<TabItem value="web" label="From the web interface">
+
 The groups page lists the permissions given to each group, including the special groups `all_users` and `visitors`.
 
-![](image://groups_default-with-permissions.png)
+![](/img/groups_default-with-permissions.png)
 
-[/ui-tab]
-[ui-tab title="From the command line"]
+</TabItem>
+<TabItem value="cli" label="From the command line">
+
 To list permissions and corresponding accesses in CLI:
 
 ```bash
@@ -169,23 +175,26 @@ permissions:
 Here, we find that all registered users can use email, XMPP, and access the WordPress blog. However, nobody can access the WordPress admin interface.
 
 More details can be displayed by adding the `--full` option which will display the list of users corresponding to groups allowed, as well as urls associated to a permission (relevant for web apps).
-[/ui-tab]
-[/ui-tabs]
+
+</TabItem>
+</Tabs>
 
 ### Add accesses to group or users
 
-[ui-tabs position="top-left" active="0" theme="lite"]
-[ui-tab title="From the web interface"]
+<Tabs groupId="admin-commands">
+<TabItem value="web" label="From the web interface">
+
 To add a permission to a group, simply click the "+" button in the group panel, scroll to the desired permission, then click on it.
 
-![](image://groups_add-permission-group.png)
+![](/img/groups_add-permission-group.png)
 
 Note that you can also allow a single user, by using the specific panel at the bottom of the page.
 
-![](image://groups_add-permission-user.png)
+![](/img/groups_add-permission-user.png)
 
-[/ui-tab]
-[ui-tab title="From the command line"]
+</TabItem>
+<TabItem value="cli" label="From the command line">
+
 To allow a group to access the WordPress admin interface in CLI:
 
 ```bash
@@ -216,24 +225,26 @@ Note that, for example, if we want to restrict permission for email so that only
 yunohost user permission update mail --remove all_users --add bob
 ```
 
-[/ui-tab]
-[/ui-tabs]
+</TabItem>
+</Tabs>
 
 Note that some permissions may be "protected", meaning that you won't be able to add/remove the visitor group to this permission. Generally, this is because it would make no sense (or is a security risk) to do so.
 
 The webadmin will issue a warning if you set a permission that is superseded by a wider permission.
 
-![](image://groups_alerte-permission.png)
+![](/img/groups_alerte-permission.png)
 
 ### Hide/display specific tiles in the user portal
 
 Since YunoHost 4.1, you can choose to hide/display specific tiles in the SSO.
-[ui-tabs position="top-left" active="0" theme="lite"]
-[ui-tab title="From the web interface"]
+
+<Tabs groupId="admin-commands">
+<TabItem value="web" label="From the web interface">
+
 In the webadmin, you can do so by going in the corresponding app view, go in `Manage label and tiles` and check/uncheck the option `Display the tile in the user portal` for the corresponding permission.
 
-[/ui-tab]
-[ui-tab title="From the command line"]
+</TabItem>
+<TabItem value="cli" label="From the command line">
 
 In command line, this may be done with:
 
@@ -242,8 +253,8 @@ In command line, this may be done with:
 yunohost user permission update wordpress.admin --show_tile True
 ```
 
-[/ui-tab]
-[/ui-tabs]
+</TabItem>
+</Tabs>
 
 ### Config alias group
 
