--- a/docs/02.administer/15.admin_guide/55.upgrade/12.bullseye_bookworm/05.issues_faq/05.issues_faq.md
+++ b/docs/02.administer/15.admin_guide/55.upgrade/12.bullseye_bookworm/05.issues_faq/05.issues_faq.md
@@ -1,10 +1,5 @@
 ---
-title: Bookworm migration isues FAQ
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/bookworm_migration_issues_faq'
+title: Migration isues FAQ
 ---
 
 This page lists all the known issues encountered after a migration from YunoHost 11 to 12.
@@ -22,7 +17,7 @@ In addition, the apps below won't be automatically repaired, you need to force-u
 Apps which won't be automatically repaired and need a force upgrade:
 
 - **borgserver** and all its instances (eg. `borgserver__2`, `borgserver__3`, ...)
-- **borg** (<https://apps.yunohost.org/app/borg>) : rebuilt using `yunohost app upgrade -F borg` (otherwise, will sent emails notifying that "The backup miserably failed to backup", with error `ModuleNotFoundError: No module named 'borg'`)
+- **borg** ([Borg on the app store](https://apps.yunohost.org/app/borg)) : rebuilt using `yunohost app upgrade -F borg` (otherwise, will sent emails notifying that "The backup miserably failed to backup", with error `ModuleNotFoundError: No module named 'borg'`)
 
 TODO: list those apps
 
@@ -38,7 +33,7 @@ sudo systemctl restart nginx
 
 ## Mailman3 failed in diagnostics
 
-A manual change in a configuration file is needed for Mailman3 to work : <https://github.com/YunoHost-Apps/mailman3_ynh/issues/48#issuecomment-2536194377>
+A manual change in a configuration file is needed for Mailman3 to work, see [the relevant issue](https://github.com/YunoHost-Apps/mailman3_ynh/issues/48#issuecomment-2536194377).
 
 <!-- ### Can't run the migration due to `libc6-dev : Breaks: libgcc-8-dev issue`
 
